# openSMT_c

./: .gitignore  CMakeLists.txt  README.md
config/: README.md  config.json
config/io/: io.json
config/placer/: cost.json  grid.json  placer.json
config/project/: project.json
config/runtime/: actors.json  communication.json  device-drivers.json  hardware-drivers.json  modules.json  runtime.json
doc/: README.md
include/openSMT/: App.hpp  Placer.hpp
include/openSMT/comm/: Frame.hpp  MessageBus.hpp
include/openSMT/config/: AppConfig.hpp  ConfigLoader.hpp
include/openSMT/control/: AppControlMessage.hpp  DeviceDriverMessage.hpp
include/openSMT/drivers/: DeviceDriver.hpp  GenericDeviceDriver.hpp
include/openSMT/hw/: CanHardwareDriver.hpp  IHardwareDriver.hpp  ISerialProtocolAdapter.hpp  MarlinSerialProtocolAdapter.hpp  SerialHardwareDriver.hpp
include/openSMT/modules/: CommunicationMonitorModule.hpp  DeviceDriverRuntimeModule.hpp  IModule.hpp  PlacerModule.hpp
src/: App.cpp  Placer.cpp  appActor_main.cpp  appDisableAll_main.cpp  appGetActors_main.cpp  appGetPos_main.cpp  appGoto_main.cpp  appHomeXY_main.cpp  appHomeZ_main.cpp  appMoveR_main.cpp  appMoveXY_main.cpp  appMoveZ_main.cpp  appRotZ_main.cpp  appterm_main.cpp  main.cpp
src/comm/: MessageBus.cpp
src/config/: ConfigLoader.cpp
src/control/: AppControlMessage.cpp
src/drivers/: DeviceDriver.cpp  GenericDeviceDriver.cpp
src/hw/: CanHardwareDriver.cpp  MarlinSerialProtocolAdapter.cpp  SerialHardwareDriver.cpp
src/modules/: CommunicationMonitorModule.cpp  DeviceDriverRuntimeModule.cpp  PlacerModule.cpp
